# okf-wiki-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  okf.config.example.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: FIELD-REPORT-v0.2.1.md  roadmap.md  writing-an-adapter.md
examples/textbook/: adapter.py
okfkit/: __init__.py  cli.py  config.py  doctor.py  engine.py  enrich.py  envfile.py  freshness.py  model.py  render.py
okfkit/adapters/: __init__.py  base.py  markdown_folder.py
okfkit/serve/: __init__.py  embeddings.py  mcp.py  rag.py  vault.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_cli_register.py  test_cli_serve.py  test_cli_staleness.py  test_config.py  test_doctor.py  test_engine.py  test_enrich.py  test_envfile.py  test_freshness.py  test_integration.py  test_prompt.py  test_render.py  test_serve_mcp.py  test_serve_rag.py
