[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "okf-wiki-kit"
version = "0.2.1"
description = "Build Open-Knowledge-Format (OKF) / Obsidian LLM wikis from any source material."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "okf-wiki-kit contributors" }]
keywords = ["okf", "obsidian", "knowledge-graph", "llm", "rag", "wiki", "markdown"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# LLM enrichment backends — install only what you use.
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]          # also covers OpenRouter (OpenAI-compatible) and OpenAI embeddings
openrouter = ["openai>=1.40"]     # alias of [openai]: OpenRouter is OpenAI-compatible (use --provider openai)
# Semantic RAG (`okf index` / `okf search` / `okf ask`) — install only what you use.
rag = ["numpy>=1.24"]
voyage = ["voyageai>=0.3"]
local-embeddings = ["numpy>=1.24", "model2vec>=0.3"]
# MCP server (`okf serve`) — expose the built vault as tools for Claude Code / Desktop.
mcp = ["mcp>=1.2"]
dev = ["pytest>=7.0"]

[project.scripts]
okf = "okfkit.cli:main"

[project.urls]
Homepage = "https://github.com/olivermorgan2/okf-wiki-kit"
Issues = "https://github.com/olivermorgan2/okf-wiki-kit/issues"
Repository = "https://github.com/olivermorgan2/okf-wiki-kit"

[tool.setuptools.packages.find]
include = ["okfkit*"]
